...
        app:title="Ma Réu"
        android:background="?attr/colorPrimary">
    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_main_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="20dp"
...
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="4dp" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_main_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/fragment_item_list"/>
    </FrameLayout>

</RelativeLayout>
