<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/size_margin_top"
    android:layout_marginEnd="@dimen/size_margin_top">

...
        android:textSize="@dimen/size_text_custom"
        android:textColor="#FF69B4"
        android:layout_marginTop="@dimen/size_margin_top"
        android:layout_marginStart="@dimen/size_margin_start"/>

    <Button
        android:id="@+id/button_custom"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/size_text_custom"
        android:background="@drawable/border"
...
